--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.1.2",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.12"
+    "express-session": "^1.17.0",
+    "mongoose": "^5.7.12",
+    "session": "^0.1.0"
   }
 }
